--- a/estilo.css
+++ b/estilo.css
@@ -117,7 +117,7 @@ button::before {
     }
 }
 .modal {
-    display: none; /* Oculto por defecto */
+    display: none; 
     position: fixed;
     z-index: 1;
     left: 0;
@@ -125,7 +125,6 @@ button::before {
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgb(0, 0, 0);
     background-color: rgba(0, 0, 0, 0.4);
   }
   
@@ -135,7 +134,9 @@ button::before {
     padding: 20px;
     border: 1px solid #888;
     width: 80%;
-    max-width: 300px; /* Ancho máximo del modal */
+    max-width: 400px; 
+    border-radius: 10px; 
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
   }
   
   .close {
@@ -150,4 +151,38 @@ button::before {
     color: black;
     text-decoration: none;
     cursor: pointer;
+  }
+  
+  .modal-content form label {
+    display: block;
+    margin-bottom: 8px;
+    color: #333;
+  }
+  
+  .modal-content form input[type="text"],
+  .modal-content form input[type="date"],
+  .modal-content form textarea {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box;
+  }
+  
+  .modal-content form button {
+    background: black;
+    cursor: pointer;
+    border: none;
+    padding: 10px 20px;
+    color: white;
+    font-size: 14px;
+    font-weight: bold;
+    border-radius: 5px;
+    width: 100%; /* Ancho completo */
+    margin-top: 10px;
+  }
+  
+  .modal-content form button:hover {
+    background: #444;
   }
